# FlashOverlap

./: CMakeLists.txt  README.md  run.sh
cmake/Modules/: FindMCCL.cmake
docs/_static/image/: gemm_sweep_result.md  porting_plan_musa.md  profiling_musa.md
example/: RMSNorm.py  RowParallelLinear.py  correctness_ar.py  correctness_rs.py  utils.py
src/: CMakeLists.txt  baseline_impl.cu  baseline_impl.h  mccl_utils.cu  mccl_utils.h  musa_torch_compat.h  overlap_impl.cpp  overlap_impl.cu  overlap_impl.h  pybind.cpp  wait.cuh  wait_launch.cu  wait_launch.h
src/gemm/: gemm.cu  gemm.h
src/inc/: gemm_instances.inc  monitor_instances.inc  scatter_instances.inc  signal_instances.inc
src/overlap/: gemm_scatter.cu  gemm_scatter.h  gemm_signal.cu  gemm_signal.h  gemm_with_scatter.h  gemm_with_signal.h
src/rmsnorm/: rmsnorm.cpp  rmsnorm.cu  rmsnorm.cuh  rmsnorm.h  rmsnorm_launch.cu  rmsnorm_launch.h
src/tiling/: gemm_dispatcher.h  gemm_tiling.cuh  scatter_tiling.cuh  signal_tiling.cuh
test/: sweep_gemm.py  test.py  test_multinode.py
tool/: generate_instances.py
tune/: bandwidth.py  bandwidth_multinode.py  gen_config.py  profile_config.py  search.py  search_multinode.py
